# ttv-scribe

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: add-to-queue.yml  bilibili-distributed.yml  cleanup-workflows.yml  cron.yml  iptv-transcribe.yml  process-queue-parallel.yml  process-queue.yml  test-github-minutes.yml  test-streaming-pipeline.yml  test-transcription.yml  transcribe-distributed.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: recheck_failed_vods.py  run_pipeline.sh  scrape_bilibili.py  transcribe_vod.py
src/: __init__.py  audio_utils.py  bilibili_patch.py  config.py  database.py  downloader.py  models.py  monitor.py  monthly_tracker.py  pipeline.py  proxy.py  search.py  state.py  transcriber.py  transcriber_local.py
src/api/: main.py
src/bilibili/: __init__.py  client.py
src/cli/: __init__.py  assemble_transcript.py  record_iptv.py  split_vod.py  transcribe_chunk.py
src/distributed/: __init__.py  assembler.py  splitter.py  worker.py
src/iptv/: channel_state.py  client.py
src/kick/: __init__.py  client.py
src/kuaishou/: __init__.py  client.py
src/twitch/: __init__.py  client.py
src/youtube/: __init__.py  client.py
state/: iptv_allowlist.json  iptv_banlist.json  iptv_state.json  monthly_usage.json  streamers.json  vods.json
tests/: conftest.py  test_assembler.py  test_audio_utils.py  test_config.py  test_downloader.py  test_kick_client.py  test_monitor.py  test_monthly_tracker.py  test_pipeline.py  test_splitter.py  test_state.py  test_transcriber.py  test_twitch_client.py  test_worker.py  test_youtube_client.py
transcripts/Beach TV Florida & Alabama/: BeachTVFloridaAlabama_us.json
transcripts/Beach TV Key West & Florida Keys/: BeachTVKeyWestFloridaKeys_us.json
transcripts/Beach TV Myrtle Beach & The Grand Strand/: BeachTVMyrtleBeachTheGrandStrand_us.json
transcripts/Beach TV Panama City/: BeachTVPanamaCity_us.json
transcripts/Chile Channel/: ChileChannel_cl.json
transcripts/Costa Rica Channel/: CostaRicaChannel_cr.json
transcripts/Discover Pakistan/: DiscoverPakistan_pk.json
transcripts/GabrielTravelerVideos/: -8JO59pzwU4.json  -bMa9OnIeU4.json  1iBZdLx-9PQ.json  2dvuMewb_Eo.json  4EnQ-OlO20w.json  4YKSl3dQvJk.json  4soH77KlrT4.json  7_Vvv2mVbh8.json  8n-Wf_pZnb0.json  ATHRP_hB08U.json  AhUdLuzbIjA.json  AyF9CL_R63c.json  BMGqU5Bxre4.json  CxVKhFkmvs8.json  DoQbhQLZduA.json  E3GYj1j9zuk.json  FsCg4K29xB4.json  Ik4iJXVVHzo.json  K4U39OgYHdU.json  NyNNy6ZEztc.json  OEWzC-OpHiI.json  Pv9ktXz0UBE.json  QeWuo9edBc8.json  RlB8iReGMMc.json  RzCshawrXCU.json  S4LFsNauYLU.json  TRqDZRJYayA.json  UWl2NbjKD_I.json  Wi7oXBP6KmY.json  XcxYDjFhQzQ.json  (+18 more)
(+1167 files in other folders)
