[project]
name = "ttv-scribe"
version = "0.1.0"
description = "Twitch transcript intelligence database"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "yt-dlp>=2023.10.0",
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"