[project]
name = "ttv-scribe"
version = "0.1.0"
description = "Twitch transcript intelligence database"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "yt-dlp>=2026.3.17",
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
    "curl-cffi>=0.10.0,<0.15.0",
    "httpx[socks]>=0.27.0",
    "youtube-transcript-api>=1.0.0",
    "pysocks>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]
scrape = [
    "playwright>=1.45.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
